se agrega cuerpo

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
         <title>dany</title>
     </head>
     <body>
-
+        <p>
+            este es el cuerpo
+        </p>
     </body>
 </html>
