--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
         <title>dany</title>
     </head>
     <body>
-        <p>
-            este es el cuerpo
-        </p>
+        <p> contenido nuevo1 </p>
+        <p> contenido nuevo2 </p>
+        <p> contenido nuevo3 </p>
+        <p> contenido nuevo4 </p>
+        <p> otra informacion importante en el archivo </p>
     </body>
 </html>
